welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:4: error: not found: value getCouleursol
      if (getCouleursol){
          ^SlugTracking:8: error: type mismatch;
 found   : Unit
 required: Boolean
  if (estSurBiscuit){
  ^